Fixed Dyamic Sphere to Static Sphere collision repsonse

--- a/OpenGL/imgui.ini
+++ b/OpenGL/imgui.ini
@@ -104,27 +104,27 @@ Size=211,107
 Collapsed=0
 
 [Physic Object 0]
-Pos=16,-6
-Size=209,137
+Pos=2,-1
+Size=259,178
 Collapsed=0
 
 [Physic Object 1]
-Pos=1,140
-Size=210,140
+Pos=-1,177
+Size=269,180
 Collapsed=0
 
 [Physic Object 2]
-Pos=0,283
-Size=211,137
+Pos=5,359
+Size=268,182
 Collapsed=0
 
 [Physic Object 3]
-Pos=10,418
-Size=213,135
+Pos=0,541
+Size=274,178
 Collapsed=0
 
 [Physics Manager]
-Pos=915,28
+Pos=945,19
 Size=327,272
 Collapsed=0
 
@@ -134,28 +134,28 @@ Size=206,145
 Collapsed=0
 
 [Physic Object 6]
-Pos=15,557
-Size=209,140
+Pos=1060,296
+Size=214,159
 Collapsed=0
 
 [Physic Object 7]
-Pos=648,557
-Size=215,145
+Pos=1059,454
+Size=216,158
 Collapsed=0
 
 [Physic Object 8]
-Pos=1086,553
-Size=214,141
+Pos=1061,611
+Size=213,157
 Collapsed=0
 
 [Physic Object 9]
-Pos=870,552
-Size=216,149
+Pos=844,298
+Size=215,159
 Collapsed=0
 
 [Physic Object 10]
-Pos=60,60
-Size=95,140
+Pos=850,458
+Size=209,159
 Collapsed=0
 
 [Physic Object 11]
@@ -179,8 +179,8 @@ Size=95,140
 Collapsed=0
 
 [Physic Object 15]
-Pos=60,60
-Size=95,140
+Pos=827,618
+Size=235,177
 Collapsed=0
 
 [Physic Object 16]
@@ -345,7 +345,7 @@ Collapsed=0
 
 [Physic Object 48]
 Pos=60,60
-Size=95,140
+Size=182,184
 Collapsed=0
 
 [Physic Object 49]
@@ -646,5 +646,375 @@ Collapsed=0
 [Physic Object 4]
 Pos=2,556
 Size=219,140
+Collapsed=0
+
+[Physic Object 108]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 109]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 110]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 111]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 112]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 113]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 114]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 115]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 116]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 117]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 118]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 119]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 120]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 121]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 122]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 123]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 124]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 125]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 126]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 127]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 128]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 129]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 130]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 131]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 132]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 133]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 134]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 135]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 136]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 137]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 138]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 139]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 140]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 141]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 142]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 143]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 144]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 145]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 146]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 147]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 148]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 149]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 150]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 151]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 152]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 153]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 154]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 155]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 156]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 157]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 158]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 159]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 160]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 161]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 162]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 163]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 164]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 165]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 166]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 167]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 168]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 169]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 170]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 171]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 172]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 173]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 174]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 175]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 176]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 177]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 178]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 179]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 180]
+Pos=60,60
+Size=101,163
+Collapsed=0
+
+[Physic Object 181]
+Pos=60,60
+Size=101,163
 Collapsed=0
 
