--- a/Release/imgui.ini
+++ b/Release/imgui.ini
@@ -4,12 +4,352 @@ Size=400,400
 Collapsed=0
 
 [Particle Options]
-Pos=60,60
+Pos=875,4
 Size=406,209
-Collapsed=0
+Collapsed=1
 
 [Post Processing]
-Pos=933,59
+Pos=494,3
 Size=378,105
+Collapsed=1
+
+[Physics Manager]
+Pos=1010,22
+Size=264,271
+Collapsed=0
+
+[Physic Object 0]
+Pos=-3,-4
+Size=227,182
+Collapsed=0
+
+[Physic Object 1]
+Pos=0,179
+Size=224,182
+Collapsed=0
+
+[Physic Object 2]
+Pos=-1,362
+Size=228,184
+Collapsed=0
+
+[Physic Object 3]
+Pos=2,542
+Size=226,182
+Collapsed=0
+
+[Camera Settings]
+Pos=229,5
+Size=260,47
+Collapsed=1
+
+[Physic Object 6]
+Pos=1048,299
+Size=225,178
+Collapsed=0
+
+[Physic Object 7]
+Pos=1051,483
+Size=222,183
+Collapsed=0
+
+[Physic Object 8]
+Pos=1050,674
+Size=224,180
+Collapsed=0
+
+[Physic Object 9]
+Pos=828,296
+Size=218,178
+Collapsed=0
+
+[Physic Object 10]
+Pos=823,477
+Size=225,178
+Collapsed=0
+
+[Physic Object 11]
+Pos=820,662
+Size=223,178
+Collapsed=0
+
+[Physic Object 12]
+Pos=229,545
+Size=221,181
+Collapsed=0
+
+[Physic Object 13]
+Pos=597,547
+Size=223,178
+Collapsed=0
+
+[Physic Object 14]
+Pos=452,545
+Size=150,180
+Collapsed=1
+
+[Physic Object 15]
+Pos=451,567
+Size=146,183
+Collapsed=1
+
+[Physic Object 16]
+Pos=452,589
+Size=147,185
+Collapsed=1
+
+[Physic Object 17]
+Pos=451,612
+Size=145,185
+Collapsed=1
+
+[Physic Object 18]
+Pos=452,633
+Size=152,186
+Collapsed=1
+
+[Physic Object 19]
+Pos=452,657
+Size=144,183
+Collapsed=1
+
+[Physic Object 20]
+Pos=450,678
+Size=145,188
+Collapsed=1
+
+[Physic Object 21]
+Pos=451,698
+Size=147,184
+Collapsed=1
+
+[Physic Object 22]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 23]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 24]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 25]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 26]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 27]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 28]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 29]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 30]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 31]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 32]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 33]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 34]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 35]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 36]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 37]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 38]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 39]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 40]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 41]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 42]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 43]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 44]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 45]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 46]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 47]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 48]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 49]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 50]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 51]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 52]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 53]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 54]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 55]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 56]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 57]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 58]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 59]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 60]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 61]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 62]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 63]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 64]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 65]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 66]
+Pos=60,60
+Size=109,186
+Collapsed=0
+
+[Physic Object 67]
+Pos=60,60
+Size=109,186
 Collapsed=0
 
